Fixing image rendering issue, and updating some floating image and text wrapping in the About page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,8 @@ p {
 }
 
 .white-border {
-  border: 2px solid white;
-  box-sizing: border-box; /* Ensures the border is included in the element's total width and height */
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  box-sizing: border-box;  /* Ensures the border is included in the element's total width and height */
 }
